--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,16 @@
 services:
-  auth:
+  auth-service:
     build: ./services/auth_service
     container_name: auth
     ports:
-      - "8001:8000"
+      - "8000:8000"
+    environment:
+      PORT: 8000
+
+  chat-service:
+    build: ./services/chat_service
+    container_name: chat
+    ports:
+      - "8001:8001"
+    environment:
+      PORT: 8001
