--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,31 @@
 services:
+  postgres_service1:
+    image: postgres:latest
+    container_name: postgres_service1
+    environment:
+      POSTGRES_DB: auth_db
+      POSTGRES_USER: user1
+      POSTGRES_PASSWORD: password1
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres_data1:/var/lib/postgresql/data
+    restart: always
+
+
+  postgres_service2:
+    image: postgres:latest
+    container_name: postgres_service2
+    environment:
+      POSTGRES_DB: chat_db
+      POSTGRES_USER: user2
+      POSTGRES_PASSWORD: password2
+    ports:
+      - "5433:5432"
+    volumes:
+      - postgres_data2:/var/lib/postgresql/data
+    restart: always
+
   auth-service:
     build: ./services/auth_service
     container_name: auth
@@ -6,6 +33,9 @@ services:
       - "8000:8000"
     environment:
       PORT: 8000
+    depends_on:
+      - postgres_service1
+    restart: always
 
   chat-service:
     build: ./services/chat_service
@@ -14,3 +44,12 @@ services:
       - "8001:8001"
     environment:
       PORT: 8001
+    depends_on:
+      - postgres_service2
+    restart: always
+
+
+volumes:
+  postgres_data1:
+  postgres_data2:
+
